--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <button class="btn btn-primary">Explore More</button>
                 </div>
                 <div>
-                    <img src="/images/banner.png" class="max-w-sm" />
+                    <img src="./images/banner.png" class="max-w-sm" />
                     <!-- This is Ratting Badge -->
                     <div class="-mt-16 flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60">
                         <i class="fa-solid fa-star text-3xl text-amber-400"></i>
@@ -75,7 +75,7 @@
             <div class="grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
                 <!-- 1st Card -->
                 <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[rgba(#F4F4F4);] shadow-xl">
-                    <figure><img src="/images/tea-1.png" alt="tea" /></figure>
+                    <figure><img src="./images/tea-1.png" alt="tea" /></figure>
                     <div class="card-body">
                         <h2 class="text-2xl font-bold">Milk Tea</h2>
                         <p>Creamer could be replaced by fresh milk</p>
@@ -83,7 +83,7 @@
                 </div>
                 <!-- 2nd Card -->
                 <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[rgba(#F4F4F4);] shadow-xl">
-                    <figure><img src="/images/tea-2.png" alt="tea" /></figure>
+                    <figure><img src="./images/tea-2.png" alt="tea" /></figure>
                     <div class="card-body">
                         <h2 class="text-2xl font-bold">Milk Tea</h2>
                         <p>Creamer could be replaced by fresh milk</p>
@@ -91,7 +91,7 @@
                 </div>
                 <!-- 3rd Card -->
                 <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[rgba(#F4F4F4);] shadow-xl">
-                    <figure><img src="/images/tea-3.png" alt="tea" /></figure>
+                    <figure><img src="./images/tea-3.png" alt="tea" /></figure>
                     <div class="card-body">
                         <h2 class="text-2xl font-bold">Milk Tea</h2>
                         <p>Creamer could be replaced by fresh milk</p>
@@ -99,7 +99,7 @@
                 </div>
                 <!-- 4th Card -->
                 <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[rgba(#F4F4F4);] shadow-xl">
-                    <figure><img src="/images/tea-4.png" alt="tea" /></figure>
+                    <figure><img src="./images/tea-4.png" alt="tea" /></figure>
                     <div class="card-body">
                         <h2 class="text-2xl font-bold">Milk Tea</h2>
                         <p>Creamer could be replaced by fresh milk</p>
@@ -137,7 +137,7 @@
             </div>
             <div>
                 <div class="relative p-10 rounded-lg bg-white">
-                    <img class="absolute -top-5 -left-5" src="images/client.png" alt="">
+                    <img class="absolute -top-5 -left-5" src="./images/client.png" alt="">
                     <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
                     <h4 class="font-bold mt-5">Ilham Yuda</h4>
                     <p>Businessman</p>
