--- a/index.html
+++ b/index.html
@@ -121,7 +121,10 @@
             </div>
             <div class="space-y-5 flex-1">
                 <h3 class="text-5xl font-extrabold">Great Tea, Freshly <br> Presented</h3>
-                <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It
+                    represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply
+                    appreciated by its custoers because of good words of mouth and unique customized service orginated
+                    from Taiwan.</p>
                 <h4 class="text-xl font-extrabold">Unique Taste</h4>
                 <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
                 <h4 class="text-xl font-extrabold mt-8">Premium Quality</h4>
@@ -129,25 +132,106 @@
             </div>
         </section>
         <!-- This is Super Client Section -->
-        <section class="my-24 flex flex-col md:flex-row rounded-xl bg-gradient-to-r from-[#FF8938] to-[#F00] px-16 py-24">
-            <div class="space-y-5">
-                <h2 class="text-5xl font-extrabold text-white">Meet Our Super Clients</h2>
-                <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-                <button class="btn btn-white">Show All</button>
+        <section
+            class="my-24 flex flex-col md:flex-row rounded-xl bg-gradient-to-r from-[#FF8938] to-[#F00] px-16 py-24">
+            <div class="flex lg:pr-28 items-center">
+                <div class="space-y-5">
+                    <h2 class="text-5xl font-extrabold text-white">Meet Our Super Clients</h2>
+                    <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised words which
+                        don't look even slightly believable. </p>
+                    <button class="btn btn-white">Show All</button>
+                </div>
             </div>
-            <div>
-                <div class="relative p-10 rounded-lg bg-white">
-                    <img class="absolute -top-5 -left-5" src="./images/client.png" alt="">
-                    <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+            <div class="relative">
+                <!-- This is Next Section -->
+                <div class="relative mb-16 opacity-40 p-10 z-10 rounded-lg bg-white">
+                    <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white"
+                        src="./images/client.png" alt="">
+                    <p>We are providing the best and suitable home insurance services for the people who are interested
+                        to treatment</p>
                     <h4 class="font-bold mt-5">Ilham Yuda</h4>
                     <p>Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="./images/circles.png" alt="">
+                    </div>
+                </div>
+                <!-- This is Current Review -->
+                <div class="absolute top-40 lg:-left-24 z-20 lg:w-[430px] p-10 rounded-lg bg-white">
+                    <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white"
+                        src="./images/client.png" alt="">
+                    <p>We are providing the best and suitable home insurance services for the people who are interested
+                        to treatment</p>
+                    <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                    <p>Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="./images/circles.png" alt="">
+                    </div>
+                </div>
+                <!-- This is Previous Review -->
+                <div class="relative opacity-40 z-10 p-10 rounded-lg bg-white">
+                    <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white"
+                        src="./images/client.png" alt="">
+                    <p>We are providing the best and suitable home insurance services for the people who are interested
+                        to treatment</p>
+                    <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                    <p>Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="./images/circles.png" alt="">
+                    </div>
                 </div>
             </div>
         </section>
 
     </main>
-    <footer>
-
+    
+    <!-- This is Footer Section -->
+    
+    <footer class="px-48 py-10 bg-base-200 text-base-content">
+        <div class="flex justify-between my-24">
+            <img src="./images/cup.png" alt="">
+            <p>
+                <span>Ready to get Started</span>
+                <button class="btn btn-primary">Get Started</button>
+            </p>
+        </div>
+        <div class="footer">
+            <nav>
+                <header class="footer-title">Services</header>
+                <a class="link link-hover">Branding</a>
+                <a class="link link-hover">Design</a>
+                <a class="link link-hover">Marketing</a>
+                <a class="link link-hover">Advertisement</a>
+            </nav>
+            <nav>
+                <header class="footer-title">Company</header>
+                <a class="link link-hover">About us</a>
+                <a class="link link-hover">Contact</a>
+                <a class="link link-hover">Jobs</a>
+                <a class="link link-hover">Press kit</a>
+            </nav>
+            <nav>
+                <header class="footer-title">Legal</header>
+                <a class="link link-hover">Terms of use</a>
+                <a class="link link-hover">Privacy policy</a>
+                <a class="link link-hover">Cookie policy</a>
+            </nav>
+            <form>
+                <header class="footer-title">Newsletter</header>
+                <fieldset class="form-control w-80">
+                    <label class="label">
+                        <span class="label-text">Enter your email address</span>
+                    </label>
+                    <div class="join">
+                        <input type="text" placeholder="username@site.com" class="input bg-transparent border-b-2 border-black outline-none" />
+                        <button class="btn btn-primary join-item">Subscribe</button>
+                    </div>
+                </fieldset>
+            </form>
+        </div>
+        <div class="mt-10 text-center">
+            <p>Copyright © 2024 - All right reserved by ACME Industries Ltd</p>
+        </div>
     </footer>
 </body>
 
